# Python-Test-Automation-Project-Example

./: .gitignore  Dockerfile  Jenkinsfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  urls.py
core/: api_client.py  game_api_client.py  response.py  response_validator.py
core/api/: api_client.py  response.py
core/api/enums/: global_enums.py
core/api/models/: post.py
core/api/test_data/: player_builder.py
core/configs/: main_configuration.py
core/models/: auth.py  game.py  post.py
core/test_data/: player_builder.py  query_builder.py
src/: api_client.py  game_api_client.py  requests_hooks.py  response_validator.py  utils.py
src/configs/: main_configuration.py
src/enums/: global_enums.py
src/models/: auth.py  game.py
src/test_data/: predefined_data.py  query_builder.py
tests/: test_basic_functionality.py
tests/api/: test_1.py
